# serializer version: 1
# name: test_switch_entities_snapshot[switch.home_library_garden_light_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.home_library_garden_light_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-1234-6233/6852535-OnOff',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.home_library_garden_light_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'outlet',
      'friendly_name': 'Garden Light Switch',
    }),
    'context': <ANY>,
    'entity_id': 'switch.home_library_garden_light_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.main_bedroom_patio_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_bedroom_patio_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-1234-6233/9474368-OnOff',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.main_bedroom_patio_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'outlet',
      'friendly_name': 'Patio Light',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_bedroom_patio_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.music_room_pool_pump_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.music_room_pool_pump_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-1234-6233/16168460-OnOff',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.music_room_pool_pump_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'outlet',
      'friendly_name': 'Pool Pump On&Off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.music_room_pool_pump_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.pool_house-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pool_house',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:pool',
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-1234-6233/16580352-SwimmingPool',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.pool_house-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pool House',
      'icon': 'mdi:pool',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pool_house',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.willow_house_external_siren-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.willow_house_external_siren',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:bell',
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'rtds://1234-1234-6233/4065441-RTDOutdoorSiren',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.willow_house_external_siren-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'friendly_name': 'External Siren',
      'icon': 'mdi:bell',
    }),
    'context': <ANY>,
    'entity_id': 'switch.willow_house_external_siren',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
